--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^3.0.9
   flutter_swiper: ^1.1.6
   webview_flutter: ^0.3.21
+  flutter_staggered_grid_view: ^0.3.0 
 
 dev_dependencies:
   flutter_test:
